# MedicalChatBot_Assignment_1

./: .env  README.md  medicalbot.py  pyproject.toml  requirements.txt  vector_embedding.py
data/ed35d0f1-8c63-4348-ae92-8b4247194c08/: index_metadata.pickle
